--- a/learnme-new.ipynb
+++ b/learnme-new.ipynb
@@ -401,7 +401,7 @@
     "    num_train_epochs=2,\n",
     "    predict_with_generate=True,\n",
     "    push_to_hub=False,\n",
-    "    hub_token=\"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\"\n",
+    "    hub_token=\""\n",
     ")\n",
     "\n",
     "# Set up trainer\n",
