--- a/learnme-new.ipynb
+++ b/learnme-new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "7fb81581-21ae-4e9c-ac77-efa20ba0ae25",
    "metadata": {
     "scrolled": true,
@@ -13,9 +13,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pip in /Users/sauravbhattacharyya/miniconda3/lib/python3.11/site-packages (23.3.1)\n",
+      "Requirement already satisfied: pip in /Users/sauravbhattacharyya/miniconda3/lib/python3.11/site-packages (23.3.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "\u001b[31mERROR: Could not find a version that satisfies the requirement torch==1.13.1 (from versions: 2.0.0, 2.0.1, 2.1.0, 2.1.1)\u001b[0m\u001b[31m\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement torch==1.13.1 (from versions: 2.0.0, 2.0.1, 2.1.0, 2.1.1, 2.1.2)\u001b[0m\u001b[31m\n",
       "\u001b[0m\u001b[31mERROR: No matching distribution found for torch==1.13.1\u001b[0m\u001b[31m\n",
       "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: ipython==8.16.1 in /Users/sauravbhattacharyya/miniconda3/lib/python3.11/site-packages (8.16.1)\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "edda8f7e-04fa-4292-bbda-723a994b25ca",
    "metadata": {
     "tags": []
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "fdedc00d-c0e2-4f25-b2f6-c0eb8fc6b7a1",
    "metadata": {
     "tags": []
@@ -111,13 +111,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset json (/Users/sauravbhattacharyya/.cache/huggingface/datasets/bsaurav___json/bsaurav--biography-10c0c57493cba1d3/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e)\n"
+      "WARNING:datasets.builder:Found cached dataset json (/Users/sauravbhattacharyya/.cache/huggingface/datasets/bsaurav___json/bsaurav--biography-10c0c57493cba1d3/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69b1baef699940d6b8fd0cfc786ce22d",
+       "model_id": "a48789c15f5b48e7817c0865dd979706",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,17 +127,36 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:datasets.arrow_dataset:Loading cached split indices for dataset at /Users/sauravbhattacharyya/.cache/huggingface/datasets/bsaurav___json/bsaurav--biography-10c0c57493cba1d3/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-cdb23a5f059f2990.arrow and /Users/sauravbhattacharyya/.cache/huggingface/datasets/bsaurav___json/bsaurav--biography-10c0c57493cba1d3/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-8f4ebd06753917e3.arrow\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset({\n",
+      "    features: ['question', 'answer'],\n",
+      "    num_rows: 3\n",
+      "})\n"
+     ]
     }
    ],
    "source": [
     "# Load and split the dataset\n",
     "dataset = load_dataset(\"bsaurav/biography\")\n",
-    "dataset = dataset[\"train\"].train_test_split(test_size=0.2)"
+    "dataset = dataset[\"train\"].train_test_split(test_size=0.2)\n",
+    "print(dataset['test']) \n",
+    "#print(dataset.shape())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "dfecae18-c27f-4c55-b43e-3facac160049",
    "metadata": {
     "tags": []
@@ -152,39 +171,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
+   "id": "6118d98f-7deb-4a70-badf-bc62fee0d11b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORIGINAL MODEL:\n",
+      "a computer science specialization\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "\n",
+    "question: what is yor specialialization?\n",
+    "answer:\n",
+    "\"\"\"\n",
+    "input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids\n",
+    "original_model_outputs = model.generate(input_ids=input_ids, generation_config=GenerationConfig(max_new_tokens=200, num_beams=1))\n",
+    "original_model_text_output = tokenizer.decode(original_model_outputs[0], skip_special_tokens=True)\n",
+    "\n",
+    "print(f'ORIGINAL MODEL:\\n{original_model_text_output}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "b58bfd7e-e6b8-4c94-8c53-8b626c0f25c4",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/9 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/3 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:datasets.arrow_dataset:Loading cached processed dataset at /Users/sauravbhattacharyya/.cache/huggingface/datasets/bsaurav___json/bsaurav--biography-10c0c57493cba1d3/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-35618b05abda17f4.arrow\n",
+      "WARNING:datasets.arrow_dataset:Loading cached processed dataset at /Users/sauravbhattacharyya/.cache/huggingface/datasets/bsaurav___json/bsaurav--biography-10c0c57493cba1d3/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-04efa1ecf434e0ba.arrow\n"
+     ]
     }
    ],
    "source": [
@@ -209,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "d55c8494-f872-45cb-a6d5-dd3516923c41",
    "metadata": {
     "tags": []
@@ -238,103 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "826cc25d-72ff-42ea-ab3e-627824fe81f7",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sauravbhattacharyya/miniconda3/lib/python3.11/site-packages/transformers/optimization.py:391: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33msauravbhat\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93a0952c096441abb13c59b5e0e72e55",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.011168385644446567, max=1.0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.1"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/Users/sauravbhattacharyya/datascience/learnml/wandb/run-20231211_132138-bthj4rpg</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/sauravbhat/huggingface/runs/bthj4rpg' target=\"_blank\">still-planet-24</a></strong> to <a href='https://wandb.ai/sauravbhat/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/sauravbhat/huggingface' target=\"_blank\">https://wandb.ai/sauravbhat/huggingface</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/sauravbhat/huggingface/runs/bthj4rpg' target=\"_blank\">https://wandb.ai/sauravbhat/huggingface/runs/bthj4rpg</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='4' max='4' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [4/4 00:03, Epoch 2/2]\n",
+       "      <progress value='18' max='18' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [18/18 00:18, Epoch 6/6]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -352,16 +296,52 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>3.426876</td>\n",
+       "      <td>3.770663</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>3.414922</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>No log</td>\n",
-       "      <td>3.171279</td>\n",
+       "      <td>3.253946</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>3.211821</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>3.194271</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>3.200792</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -380,10 +360,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=4, training_loss=3.959766149520874, metrics={'train_runtime': 8.7752, 'train_samples_per_second': 2.051, 'train_steps_per_second': 0.456, 'total_flos': 353078009856.0, 'train_loss': 3.959766149520874, 'epoch': 2.0})"
+       "TrainOutput(global_step=18, training_loss=1.9583492279052734, metrics={'train_runtime': 20.389, 'train_samples_per_second': 2.648, 'train_steps_per_second': 0.883, 'total_flos': 973639360512.0, 'train_loss': 1.9583492279052734, 'epoch': 6.0})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,14 +374,14 @@
     "    output_dir=\"./results\",\n",
     "    evaluation_strategy=\"epoch\",\n",
     "    learning_rate=3e-4,\n",
-    "    per_device_train_batch_size=8,\n",
+    "    per_device_train_batch_size=4,\n",
     "    per_device_eval_batch_size=4,\n",
     "    weight_decay=0.01,\n",
     "    save_total_limit=3,\n",
-    "    num_train_epochs=2,\n",
+    "    num_train_epochs=6,\n",
     "    predict_with_generate=True,\n",
     "    push_to_hub=False,\n",
-    "    hub_token=\"\"\n",
+    "    hub_token=\"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\"\n",
     ")\n",
     "\n",
     "# Set up trainer\n",
@@ -421,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "c8fe925b-6e01-4b0c-a919-80a9ada1be8a",
    "metadata": {
     "tags": []
@@ -433,7 +413,7 @@
        "'/opt/homebrew/bin/git-lfs'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "ebc1c17b-5ae2-4071-b907-b3e5d2149102",
    "metadata": {
     "tags": []
@@ -460,8 +440,10 @@
     "REPOSITORY_ID = f\"{MODEL_ID.split('/')[1]}-{MODEL_NAME}\"\n",
     "#f\"{MODEL_ID.split('/')[1]}-{MODEL_NAME}\"  # the id of your huggingface repository where the model will be stored\n",
     "#NUM_TRAIN_EPOCHS = 4  # number of epochs to train\n",
-    "tokenizer.save_pretrained(\"results\")\n",
+    "#tokenizer.save_pretrained(\"results\")\n",
+    "trainer.save_model(\"results\") \n",
     "trainer.create_model_card()\n",
+    "#model.config.to_json()\n",
     "#trainer.push_to_hub()\n",
     "#tokenizer.push_to_hub(REPOSITORY_ID)"
    ]
