--- a/learnme-evaluate.ipynb
+++ b/learnme-evaluate.ipynb
@@ -24,7 +24,7 @@
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer, GenerationConfig\n",
     "from huggingface_hub import login\n",
     "\n",
-    "login(\"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\")"
+    "login(\"xxxxxxxx\")"
    ]
   },
   {
