removed hard codings

--- a/package.ipynb
+++ b/package.ipynb
@@ -133,7 +133,7 @@
     "#with open(repo_dir + \".tar.gz\", \"rb\") as f:\n",
     "#    s3_client.upload_fileobj(f, \"personalassistantml\", repo_dir + \".tar.gz\")\n",
     "\n",
-    "session = boto3.Session(profile_name=\"personaltrainer\")\n",
+    "session = boto3.Session(profile_name=\"xxxxxxxx\")\n",
     "\n",
     "sts = session.client(\"sts\")\n",
     "response = sts.assume_role(\n",
@@ -148,7 +148,7 @@
     "filetoUpload = open(repo_dir + \".tar.gz\", 'rb')\n",
     "respputobject = s3.put_object(\n",
     "     Body=filetoUpload,\n",
-    "    Bucket='personalassistantml',\n",
+    "    Bucket='xxxxxx',\n",
     "    Key=repo_dir + \".tar.gz\"\n",
     "    )\n",
     "#print(respputobject)\n",
