--- a/personalassistant-Trainer.ipynb
+++ b/personalassistant-Trainer.ipynb
@@ -175,7 +175,7 @@
     "    num_train_epochs=6,\n",
     "    predict_with_generate=True,\n",
     "    push_to_hub=False,\n",
-    "    hub_token=\"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\"\n",
+    "    hub_token=\"vvvvvv\"\n",
     ")\n",
     "\n",
     "# Set up trainer\n",
